UHF-5895: Finished styling the news list paragraph

--- a/src/scss/06_components/paragraphs/__index.scss
+++ b/src/scss/06_components/paragraphs/__index.scss
@@ -12,6 +12,7 @@
 @import 'liftup-with-image';
 @import 'list-of-links';
 @import 'map';
+@import 'news-list';
 @import 'popular-service-item';
 @import 'popular-services';
 @import 'remote-video';
