UHF-6017: add loader spinner proto from hds-core, add slight scaling to panel animations so that scrolling does not yank when it occurs

--- a/src/scss/06_components/navigation/__index.scss
+++ b/src/scss/06_components/navigation/__index.scss
@@ -6,6 +6,7 @@
 @import 'language-switcher';
 @import 'local-tasks';
 @import 'mobile-navigation';
+@import 'js_mobile-navigation';
 @import 'infinite-scroll-pager';
 @import 'sidebar-menu';
 @import 'skip-to-main';
