--- a/src/scss/_hds.scss
+++ b/src/scss/_hds.scss
@@ -13,3 +13,4 @@
 @import 'xx_external/hds-core/lib/components/radio-button/radio-button.min.css';
 @import 'xx_external/hds-core/lib/components/status-label/status-label.min.css';
 @import 'xx_external/hds-core/lib/components/text-input/text-input.min.css';
+@import 'xx_external/hds-core/lib/components/loading-spinner/loading-spinner.min.css';
