--- a/templates/paragraphs/paragraph--phasing-item.html.twig
+++ b/templates/paragraphs/paragraph--phasing-item.html.twig
@@ -1,7 +1,7 @@
 {%
   set classes = [
     'phasing__item',
-    show_numbers ? 'phasing__item-with-numbers'
+    show_numbers ? 'phasing__item--with-numbers'
   ]
 %}
 
@@ -10,9 +10,11 @@
     <{{ phasing_item_heading_level }} class="phasing__item-title">
       {{ content.field_title}}
     </{{ phasing_item_heading_level }}>
-    <div class="phasing__item-description">
-      {{ content.field_description}}
-    </div>
+    {% if content.field_description|render %}
+      <div class="phasing__item-description">
+        {{ content.field_description}}
+      </div>
+    {% endif %}
   </div>
 {% endblock paragraph %}
 
