--- a/src/scss/06_components/navigation/_js_mobile-navigation.scss
+++ b/src/scss/06_components/navigation/_js_mobile-navigation.scss
@@ -2,6 +2,12 @@
 * JS menu styles (reuse CSS menu classes where possible, remove unused when done
 */
 
+:root {
+  --jsmenu-font-size : 105%;
+  --jsmenu-active-border:6px;
+  // --jsmenu--left-spacing: calc($spacing - var(--jsmenu-active-border));
+}
+
 .jsmenu__drawer {
   background:#ddd;
   overflow-x:hidden;
@@ -79,8 +85,56 @@
 }
 
 
+.jsmenu__button--back {
+
+  align-items: center;
+  background-color: white;
+  border:0;
+  display: flex;
+  margin: $spacing 0 $spacing-and-half $spacing;
+  padding:0;
+  position: relative;
+  & span {
+    background: white;
+    display: inline-block;
+    flex-grow: 1;
+    height: 100%;
+    margin-left:12px;
+  }
+}
+
+.jsmenu__panel:not(:first-child) .jsmenu__button--back::before {
+  @include pseudo-icon('angle-left', $spacing-and-half, black);
+  transform: translateX(2px);
+  // @include rotating-icon-transition;
+  z-index:3;
+}
+
+
+.jsmenu__panel:not(:first-child) .jsmenu__button--back::after {
+  background: #ddd;
+  content:'';
+  display: block;
+  height:28px;
+  left:0;
+  position:absolute;
+  width:28px;
+  z-index:2;
+  // @include rotating-icon-transition;
+}
+
+
+
 .jsmenu__panel-body {
   min-height: 60vh;
+}
+
+
+.jsmenu__title-link {
+  display:block;
+  font-size:var(--jsmenu-font-size);
+  font-weight: bold;
+  margin: $spacing;
 }
 
 .jsmenu__panel-footer {
@@ -99,7 +153,7 @@
 
 .jsmenu__language  {
   background-color: #ddd;
-  height:4rem;
+  height:2rem;
   position: relative;
 }
 
@@ -112,32 +166,40 @@
 .jsmenu__items {
   background-color: white;
   margin:0;
+  margin-top: $spacing;
   padding:0;
 }
 
 
 .jsmenu__item {
-  align-items: center;
   align-items: stretch;
   background:white;
-  border-top:1px solid #aaa;
+  border-top:1px solid #ccc;
   display:flex;
-  font-size:125%;
+  font-size:var(--jsmenu-font-size);
   gap:12px;
   margin:0;
   min-height: $spacing-triple;
-  padding-left:$spacing;
+
 }
 
 .jsmenu__itemlink {
+  align-items: center;
+  border-left:var(--jsmenu-active-border) solid white;
+  display: inline-flex;
   flex-grow: 1;
-
+  padding-left:calc($spacing - var(--jsmenu-active-border));
+  text-decoration: none;
+  &.jsmenu__itemlink--active {
+    border-color: black;
+    font-weight: bold;
+  }
 }
 
 .jsmenu__button--forward {
   background:none;
   border:0;
-  border-left:1px solid #aaa;
+  border-left:1px solid #ccc;
   flex-grow:0;
   flex-shrink: 0;
   width: 3rem;
@@ -147,16 +209,4 @@
   @include pseudo-icon('angle-right', $spacing-and-half, black);
   // @include rotating-icon-transition;
 }
-
-.jsmenu__button--back {
-  background:none;
-  border:0;
-  height:3rem;
-}
-
-.jsmenu__panel:not(:first-child) .jsmenu__button--back::before {
-  @include pseudo-icon('angle-left', $spacing-and-half, black);
-  // @include rotating-icon-transition;
-}
-
 
