UHF-6017: add padding to item link for proper spacing when in two lines

--- a/src/scss/06_components/navigation/_js_mobile-navigation.scss
+++ b/src/scss/06_components/navigation/_js_mobile-navigation.scss
@@ -188,6 +188,7 @@
   border-left:var(--jsmenu-active-border) solid white;
   display: inline-flex;
   flex-grow: 1;
+  padding: $spacing-half 0;
   padding-left:calc($spacing - var(--jsmenu-active-border));
   text-decoration: none;
   &.jsmenu__itemlink--active {
