UHF-5869: Create global hamburger menu foundation

--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -34,8 +34,7 @@
 
 {# Do we want to render navigation with content from another instance "globally" #}
 {% if use_global_navigation %}
-
-  {# GLOBAL NAV MENU TOGGLE #}
+  <div id="menu"></div>
 {% else %}
   {# This checkbox handles opening and closing mobile menu #}
   <input type="checkbox" id="cssmenu-toggle-checkbox" class="cssmenu-toggle-checkbox js-cssmenu-toggle-checkbox" role="button" aria-labelledby="cssmenu-toggle">
