--- a/templates/block/block--mobile-navigation.html.twig
+++ b/templates/block/block--mobile-navigation.html.twig
@@ -41,7 +41,54 @@ HESBURGER
   <div id="jsmenu__panels" class="jsmenu__panels"/>
 </nav>
 
+  <div class="menu-toggle-anchor">
+    <a href="#" class="menu-toggle__close"><span aria-label="{{ 'Close navigation menu'|t({}, {'context': 'Mobile navigation menu close button text for screen readers'}) }}">{{ 'Close'|t }}</a>
+    <a href="#menu" class="menu-toggle__open"><span aria-label="{{ 'Open navigation menu'|t({}, {'context': 'Mobile navigation menu open button text for screen readers'}) }}">{{ 'Menu'|t }}</a>
+  </div>
+  <button class="menu-toggle-button js-menu-toggle-button" aria-expanded="false" aria-controls="menu-dropdown">
+    <span class="menu-toggle__open"><span aria-label="{{ 'Open navigation menu'|t({}, {'context': 'Mobile navigation menu open button text for screen readers'}) }}">{{ 'Menu'|t }}</span></span>
+    <span class="menu-toggle__close"><span aria-label="{{ 'Close navigation menu'|t({}, {'context': 'Mobile navigation menu close button text for screen readers'}) }}">{{ 'Close'|t }}</span></span>
+  </button>
+  <nav id="menu-dropdown" class="menu-dropdown" aria-labelledby="menu-description">
+    <div class="menu-dropdown__wrapper" aria-labelledby="menu-description">
+      <div class="menu-dropdown__content" aria-labelledby="menu-description">
+        <h2 class="visually-hidden" id="menu-description">{{ 'Navigation menu'|t({}, {'context': 'Mobile navigation menu description for screen readers'}) }}</h2>
 
+        <div class="megamenu">
+          Megamenu
+          <ul>
+            <li>Lorem, ipsum dolor.</li>
+            <li>Officiis, debitis voluptatem!</li>
+            <li>Nulla, debitis cumque!</li>
+            <li>Blanditiis, optio sint.</li>
+            <li>Nihil, pariatur perferendis!</li>
+            <li>Vel, deleniti earum.</li>
+            <li>Minima, earum sit?</li>
+            <li>Porro, reprehenderit error.</li>
+            <li>Quasi, officiis architecto.</li>
+            <li>Enim, quasi minima?</li>
+          </ul>
+        </div>
+
+        <div class="mobile-menu">
+          Mobile menu
+          <ul>
+            <li>Lorem, ipsum dolor.</li>
+            <li>Officiis, debitis voluptatem!</li>
+            <li>Nulla, debitis cumque!</li>
+            <li>Blanditiis, optio sint.</li>
+            <li>Nihil, pariatur perferendis!</li>
+            <li>Vel, deleniti earum.</li>
+            <li>Minima, earum sit?</li>
+            <li>Porro, reprehenderit error.</li>
+            <li>Quasi, officiis architecto.</li>
+            <li>Enim, quasi minima?</li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </nav>
 {% else %}
   {% set attributes = attributes.addClass('block--mobile-navigation').addClass('mobile-navigation') %}
 
@@ -49,12 +96,12 @@ HESBURGER
     <span class="cssmenu-toggle__open"><span aria-label="{{ 'Open navigation menu'|t({}, {'context': 'Mobile navigation menu open button text for screen readers'}) }}">{{ 'Menu'|t }}</span></span>
     <span class="cssmenu-toggle__close"><span aria-label="{{ 'Close navigation menu'|t({}, {'context': 'Mobile navigation menu close button text for screen readers'}) }}">{{ 'Close'|t }}</span></span>
   </label>
-  <button class="cssmenu-toggle-button js-cssmenu-toggle-button" aria-expanded="false">
+  <button class="cssmenu-toggle-button js-cssmenu-toggle-button" aria-expanded="false" aria-controls="cssmenu-menu">
     <span class="cssmenu-toggle__open"><span aria-label="{{ 'Open navigation menu'|t({}, {'context': 'Mobile navigation menu open button text for screen readers'}) }}">{{ 'Menu'|t }}</span></span>
     <span class="cssmenu-toggle__close"><span aria-label="{{ 'Close navigation menu'|t({}, {'context': 'Mobile navigation menu close button text for screen readers'}) }}">{{ 'Close'|t }}</span></span>
   </button>
 
-  <nav class="cssmenu-menu" aria-labelledby="cssmenu-menu-description">
+  <nav id="cssmenu-menu" class="cssmenu-menu" aria-labelledby="cssmenu-menu-description">
     <h2 class="visually-hidden" id="cssmenu-menu-description">{{ 'Navigation menu'|t({}, {'context': 'Mobile navigation menu description for screen readers'}) }}</h2>
 
     {{ drupal_entity('block', 'language_switcher')}}
