--- a/templates/block/block--mobile-navigation.html.twig
+++ b/templates/block/block--mobile-navigation.html.twig
@@ -34,12 +34,14 @@
 
 {# Do we want to render navigation with content from another instance "globally" #}
 {% if use_global_navigation %}
-  <button class="jsmenu__open">
-HESBURGER
+
+  <button class="jsmenu__open" aria-expanded="false" aria-controls="jsmenu">
+    <span class="jsmenu-toggle__open"><span aria-label="{{ 'Open navigation menu'|t({}, {'context': 'Mobile navigation menu open button text for screen readers'}) }}">{{ 'Menu'|t }}</span></span>
+    <span class="jsmenu-toggle__close"><span aria-label="{{ 'Close navigation menu'|t({}, {'context': 'Mobile navigation menu close button text for screen readers'}) }}">{{ 'Close'|t }}</span></span>
   </button>
-<nav id="jsmenu" class="jsmenu__drawer">
-  <div id="jsmenu__panels" class="jsmenu__panels"/>
-</nav>
+  <nav id="jsmenu" class="jsmenu__drawer">
+    <div id="jsmenu__panels" class="jsmenu__panels"/>
+  </nav>
 
   <div class="menu-toggle-anchor">
     <a href="#" class="menu-toggle__close"><span aria-label="{{ 'Close navigation menu'|t({}, {'context': 'Mobile navigation menu close button text for screen readers'}) }}">{{ 'Close'|t }}</a>
