UHF-6017: remove drawer width for now

--- a/src/scss/06_components/navigation/global/_js_mobile-navigation.scss
+++ b/src/scss/06_components/navigation/global/_js_mobile-navigation.scss
@@ -13,7 +13,7 @@ $-jsmenu-border: #ccc;
   display:none;
   height:100vh;
   //this causes panel flex to break. Either fix
-  width: 100vw;
+  // width: 100vw;
   z-index: 2;
 }
 
